# obs-studio

.github/actions/build-obs/: action.yaml
.github/actions/package-obs/: action.yaml
.github/actions/services-validator/: action.yaml
.github/scripts/: .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml  main.yml  pr-pull.yaml  push.yaml
UI/: CMakeLists.txt  api-interface.cpp  berryessa-every-minute.cpp  berryessa-every-minute.hpp  berryessa-submitter.cpp  berryessa-submitter.hpp  goliveapi-censoredjson.cpp  goliveapi-censoredjson.hpp  goliveapi-network.cpp  goliveapi-network.hpp  goliveapi-postdata.cpp  goliveapi-postdata.hpp  immutable-date-time.cpp  immutable-date-time.hpp  ivs-events.cpp  ivs-events.h  ivs-events.hpp  multitrack-video-error.cpp  multitrack-video-error.hpp  multitrack-video-output.cpp  multitrack-video-output.hpp  obs-app.cpp  presentmon-csv-capture.cpp  presentmon-csv-parser.cpp  qt-helpers.hpp  simulcast-error.cpp  simulcast-error.h  simulcast-output.cpp  simulcast-output.h  simulcast-output.hpp  system-info-macos.mm  system-info-posix.cpp  system-info-windows.cpp  system-info.hpp  window-basic-about.cpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-auto-config.hpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  (+11 more)
UI/cmake/: legacy.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake
UI/data/license/: presentmon_mit.txt
UI/data/locale/: bg-BG.ini  en-US.ini  pt-BR.ini
UI/forms/: AutoConfigStreamPage.ui  AutoConfigTestPage.ui  OBSAbout.ui  OBSBasicSettings.ui
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
cmake/Modules/: VersionConfig.cmake
cmake/common/: versionconfig.cmake
cmake/macos/: compilerconfig.cmake
docs/sphinx/: reference-frontend-api.rst  reference-modules.rst
frontend/: OBSStudioAPI.cpp
frontend/widgets/: OBSBasic.cpp  OBSBasic.hpp
libobs/: obs-encoder.c  obs-internal.h  obs-module.c  obs-module.h  obs-output.c  obs-output.h  obs-scene.c  obs-service.h  obs-source.c  obs-video-gpu-encode.c  obs-video.c  obs.c  obs.h
libobs-d3d11/: d3d11-shader.cpp
libobs/cmake/: os-windows.cmake
libobs/util/: bmem.c  bmem.h  pipe-posix.c  platform-nix.c  platform-windows.c  platform.c  platform.h
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: obs-ffmpeg-nvenc.c  obs-nvenc.c
plugins/obs-outputs/: flv-mux.c  flv-mux.h  flv-output.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-outputs-simulcast/: CMakeLists.txt  flv-mux.c  flv-mux.h  flv-output.c  null-output.c  obs-outputs.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-outputs-simulcast/cmake/: legacy.cmake
plugins/obs-outputs/librtmp/: rtmp.c
plugins/rtmp-services/: rtmp-common.c  rtmp-custom.c
plugins/rtmp-services/data/: services - amazon ivs.json
plugins/rtmp-services/data/schema/: service-schema-v5.json
plugins/simulcast/: CMakeLists.txt
plugins/simulcast/cmake/: legacy.cmake
plugins/simulcast/data/: plugin-ivs.json  plugin.json  simulcast.json
plugins/simulcast/data/locale/: en-US-ivs.ini  en-US.ini
plugins/simulcast/src/: berryessa-every-minute.cpp  berryessa-every-minute.hpp  berryessa-submitter.cpp  berryessa-submitter.hpp  goliveapi-network.cpp  goliveapi-network.hpp  goliveapi-postdata.cpp  goliveapi-postdata.hpp  immutable-date-time.cpp  ivs-events.cpp  ivs-events.h  presentmon-csv-capture.cpp  presentmon-csv-capture.hpp  presentmon-csv-parser.hpp  qt-helpers.cpp  qt-helpers.h  simulcast-dock-widget.cpp  simulcast-dock-widget.h  simulcast-output.cpp  simulcast-output.h  simulcast-plugin.cpp  simulcast-service.cpp  simulcast-settings-window.cpp  simulcast-settings-window.h  system-info-macos.cpp  system-info-macos.mm  system-info-posix.cpp  system-info-windows.cpp  system-info.h  wmi-data-provider.cpp  wmi-data-provider.h
plugins/simulcast/src/copy-from-obs/: remote-text.cpp  remote-text.hpp
